--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
 </header>                  
     <div class="home">           <!-- mind HOME-->
-        <h3>Diseños Excepxionales para Epresas Ambiciosas</h3>
+        <h3>Diseños Excepcionales para Epresas Ambiciosas</h3>
         <p>La agencia gráfica digital que te contacta con tus clientes. Rever este texto.</p>
         <button class="botoncontactohome">Contacto</button>
     </div>         
