--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <a name="irToTop"></a>        
 <header class="header">     <!-- logo barra de navegacion y login -->  
                  
-             <a href="#irToTop"><img src="/imagenes/logo HEADER.png" alt="Logo" class="logo"></a>
+             <a href="#irToTop"><img src="/proyecto-m-dulo1/imagenes/logo HEADER.png" alt="Logo" class="logo"></a>
              <ul class="nav">
                  <a href="#irPlanes"><li>Planes</li></a>
                  <a href="#irPortfolio"><li>Portfolio</li></a>
@@ -59,22 +59,22 @@
     <a name="irPortfolio"></a> 
         <h3>Portfolio</h3>
         <grid class="grid-container">
-            <img src="/imagenes/1 WTF Posteo para redes sociales.png" alt="WTF Burger">
-            <img src="/imagenes/2 OMG Posteo para redes sociales.png" alt="OMG Fried Chicken">
-            <img src="/imagenes/3 OMG Posteo para redes sociales.png" alt="OMG Fried Chicken">
-            <img src="/imagenes/4 PERÚ Posteo para redes sociales.png" alt="Perú 26">
-            <img src="/imagenes/5 WASABI Posteo para redes sociales.png" alt="Wasabi Sushi">
-            <img src="/imagenes/6 WTF Posteo para redes sociales.png" alt="WTF Burger">
-            <img src="/imagenes/7 DON CICCIO Posteo para redes sociales.png" alt="Don Ciccio">
-            <img src="/imagenes/8 WTF Burger Diseño de logo.png" alt="WTF Burger">
-            <img src="/imagenes/9 WTF Diseño web.png" alt="WTF Burger">
-            <img src="/imagenes/10 PAOLA SANTOS Diseño web.png" alt="Paola Santos">
-            <img src="/imagenes/11 WTF Posteo para redes sociales.png" alt="WTF Burger">       
-            <img src="/imagenes/12 WASABI Posteo para redes sociales.png" alt="Wasabi Sushi"> 
-            <img src="/imagenes/13  WTF Burger Diseño de logos.png" alt="WTF Burger"> 
-            <img src="/imagenes/13  WTF Burger Diseño de logos.png" alt="WTF Burger"> 
-            <img src="/imagenes/15 AMERICAN WINGS Diseño de folleto.png" alt="American Wings"> 
-            <img src="/imagenes/16 wok in box Diseño de packaging.png" alt="Wok in Box">     
+            <img src="/proyecto-m-dulo1/imagenes/1 WTF Posteo para redes sociales.png" alt="WTF Burger">
+            <img src="/proyecto-m-dulo1/imagenes/2 OMG Posteo para redes sociales.png" alt="OMG Fried Chicken">
+            <img src="/proyecto-m-dulo1/imagenes/3 OMG Posteo para redes sociales.png" alt="OMG Fried Chicken">
+            <img src="/proyecto-m-dulo1/imagenes/4 PERÚ Posteo para redes sociales.png" alt="Perú 26">
+            <img src="/proyecto-m-dulo1/imagenes/5 WASABI Posteo para redes sociales.png" alt="Wasabi Sushi">
+            <img src="/proyecto-m-dulo1/imagenes/6 WTF Posteo para redes sociales.png" alt="WTF Burger">
+            <img src="/proyecto-m-dulo1/imagenes/7 DON CICCIO Posteo para redes sociales.png" alt="Don Ciccio">
+            <img src="/proyecto-m-dulo1/imagenes/8 WTF Burger Diseño de logo.png" alt="WTF Burger">
+            <img src="/proyecto-m-dulo1/imagenes/9 WTF Diseño web.png" alt="WTF Burger">
+            <img src="/proyecto-m-dulo1/imagenes/10 PAOLA SANTOS Diseño web.png" alt="Paola Santos">
+            <img src="/proyecto-m-dulo1/imagenes/11 WTF Posteo para redes sociales.png" alt="WTF Burger">       
+            <img src="/proyecto-m-dulo1/imagenes/12 WASABI Posteo para redes sociales.png" alt="Wasabi Sushi"> 
+            <img src="/proyecto-m-dulo1/imagenes/13  WTF Burger Diseño de logos.png" alt="WTF Burger"> 
+            <img src="/proyecto-m-dulo1/imagenes/14  WTF Burger Diseño de logos.png" alt="WTF Burger"> 
+            <img src="/proyecto-m-dulo1/imagenes/15 AMERICAN WINGS Diseño de folleto.png" alt="American Wings"> 
+            <img src="/proyecto-m-dulo1/imagenes/16 wok in box Diseño de packaging.png" alt="Wok in Box">     
         </grid>        
 </section>                              
 <footer>                        <!-- FOOTER  FORM DE CONTACTO -->
