--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@
         </form>
 
         <button class="boton">Enviar</button>
+   
+    <p class="allRights">© 2021 CaroChe, Inc. All rights reserved.</p>    
 </footer>
-<a href="#">Try hovering over me!</a>
 
-
+                                 <!-- script -->
 <script src="index.js"></script>  
 </body>
 </html>
