--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                  <a href="#irPortfolio"><li>Portfolio</li></a>
                  <a href="#irContacto"><li>Contacto</li></a>
              </ul>
-             <button class="ingresar"> Ingresar <!--  loguin --></button>
+             <button class="ingresar" > Ingresar <!--  loguin --></button>
 
 </header>                  
     <div class="home">           <!-- mind HOME-->
         <h3>Diseños Excepcionales para Epresas Ambiciosas</h3>
         <p>La agencia gráfica digital que te contacta con tus clientes.</p>
-        <button class="botoncontactohome">Contacto</button>
+        <a href="#irContacto"><button class="botoncontactohome">Contacto</button></a>
     </div>          
 <section class="seccionDePlanes">
     <a name="irPlanes"></a> <!-- seccion PLANES -->
@@ -119,4 +119,4 @@
                                  <!-- script -->
 <script src="index.js"></script>  
 </body>
-</html>
+</html> 
